--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -62,4 +62,18 @@
         app:layout_constraintHorizontal_bias="0.2"
 
         />
+
+    <Button
+        android:id="@+id/morenews"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Full News"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.874"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.058"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
