--- a/app/src/main/res/layout/activity_mainpage.xml
+++ b/app/src/main/res/layout/activity_mainpage.xml
@@ -50,6 +50,20 @@
         />
 
     <Button
+        android:id="@+id/signout"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="Sign Out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.8"
+
+        />
+
+    <Button
         android:id="@+id/myleague"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
