--- a/app/src/main/res/layout/wst2018.xml
+++ b/app/src/main/res/layout/wst2018.xml
@@ -13,7 +13,7 @@
         android:layout_width="500dp"
         android:layout_height="100dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/eastern"
+        android:src="@drawable/western"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -26,7 +26,7 @@
         android:layout_height="30dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="2019"
+        android:text="2018"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/userlist"
         app:layout_constraintEnd_toEndOf="parent"
