--- a/app/src/main/res/layout/wst2019.xml
+++ b/app/src/main/res/layout/wst2019.xml
@@ -13,7 +13,7 @@
         android:layout_width="500dp"
         android:layout_height="100dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/eastern"
+        android:src="@drawable/western"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
