--- a/app/src/main/res/values/api_config.xml
+++ b/app/src/main/res/values/api_config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<!--    my own api key from newapi.org-->
     <string name="api_key">1ddb889fb8714993bb2988840acf68cd</string>
 </resources>
